# Modelowanie-i-symulacja-systemow

./: .gitignore  readme.md
lab1/src/: main.cc
lab2/: CMakeLists.txt
lab2/src/: main.cc
